// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestConnection snapshot test should render TestConnection 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main stepContainer"
  >
    <div
      class="heading"
    >
      Test Connection
    </div>
    <div
      class="StyledProps--font StyledProps--main connectorForm"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="min-height: 460px;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main stepFormContainer"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
            id="steps-progress"
          >
            <div
              class="StepsProgress--progressBar"
            >
              <div
                class="bp3-progress-bar bp3-no-stripes StepsProgress--progressHeight"
              >
                <div
                  class="bp3-progress-meter"
                  style="width: 0%;"
                />
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
            >
              <div
                class="StepsProgress--stepWrap"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                  data-icon="steps-spinner"
                >
                  <svg
                    height="16"
                    viewBox="0 0 128 128"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <path
                        d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                        fill="#ff8e02"
                      />
                      <path
                        d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                        fill="#ffddb3"
                        fill-opacity="0.3"
                      />
                      <path
                        d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                        fill="#ffd29a"
                        fill-opacity="0.4"
                      />
                      <path
                        d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                        fill="#ffc680"
                        fill-opacity="0.5"
                      />
                      <path
                        d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                        fill="#ffbb67"
                        fill-opacity="0.6"
                      />
                      <path
                        d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                        fill="#ffb04d"
                        fill-opacity="0.7"
                      />
                      <path
                        d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                        fill="#ffa535"
                        fill-opacity="0.8"
                      />
                      <path
                        d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                        fill="#ff991b"
                        fill-opacity="0.9"
                      />
                      <animatetransform
                        attributeName="transform"
                        calcMode="discrete"
                        dur="1200ms"
                        repeatCount="indefinite"
                        type="rotate"
                        values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                      />
                    </g>
                  </svg>
                </span>
                <div
                  class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                  style="font-weight: bold;"
                >
                  <span>
                    cd.testConnectionStepName
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main nextButton Button--with-current-color Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            finish
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestConnection snapshot test should render on click finish 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main stepContainer"
  >
    <div
      class="heading"
    >
      Test Connection
    </div>
    <div
      class="StyledProps--font StyledProps--main connectorForm"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="min-height: 460px;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main stepFormContainer"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
            id="steps-progress"
          >
            <div
              class="StepsProgress--progressBar"
            >
              <div
                class="bp3-progress-bar bp3-intent-success bp3-no-stripes StepsProgress--progressHeight"
              >
                <div
                  class="bp3-progress-meter"
                  style="width: 100%;"
                />
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
            >
              <div
                class="StepsProgress--stepWrap"
              >
                <span
                  class="bp3-icon bp3-icon-tick StyledProps--main StyledProps--color StyledProps--color-green500 StyledProps--margin-right-small"
                  icon="tick"
                >
                  <svg
                    data-icon="tick"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick
                    </desc>
                    <path
                      d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                  style="font-weight: bold;"
                >
                  <span>
                    cd.testConnectionStepName
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="validationStatus success"
          >
             
            common.test.connectionSuccessful
             
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main nextButton Button--with-current-color Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            finish
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main nextButton Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cd.launchArgo
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestConnection snapshot test test for error on fetch 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main stepContainer"
  >
    <div
      class="heading"
    >
      Test Connection
    </div>
    <div
      class="StyledProps--font StyledProps--main connectorForm"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="min-height: 460px;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main stepFormContainer"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
            id="steps-progress"
          >
            <div
              class="StepsProgress--progressBar"
            >
              <div
                class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
              >
                <div
                  class="bp3-progress-meter"
                  style="width: 100%;"
                />
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
            >
              <div
                class="StepsProgress--stepWrap"
              >
                <span
                  class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                  icon="error"
                >
                  <svg
                    data-icon="error"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      error
                    </desc>
                    <path
                      d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                  style=""
                >
                  <span>
                    cd.testConnectionStepName
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="validationStatus"
          >
            <div
              class="bp3-card bp3-elevation-0 Card--card card"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-red700 StyledProps--font-weight-semi-bold"
                style="margin-bottom: 16px;"
              >
                cd.notReachable
                <a
                  href=""
                  rel="noreferrer"
                  target="_blank"
                >
                  /api/version
                </a>
              </p>
              <div
                class="issueInfo"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey700"
                  data-icon="info"
                  style="margin-right: 8px;"
                >
                  <svg
                    height="16"
                    viewBox="0 0 12 12"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span>
                  cd.connectionIssueInfo
                </span>
              </div>
              <div
                class="issueSuggestion"
              >
                <span
                  class="bp3-icon bp3-icon-lightbulb StyledProps--main StyledProps--color StyledProps--color-grey700"
                  icon="lightbulb"
                  style="margin-right: 8px;"
                >
                  <svg
                    data-icon="lightbulb"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lightbulb
                    </desc>
                    <path
                      d="M9.01 14h-2c-.55 0-1 .45-1 1s.45 1 1 1h2c.55 0 1-.45 1-1s-.44-1-1-1zm1-3h-4c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1s-.44-1-1-1zm-2-11C5.26 0 3.03 1.95 3.03 4.35c0 2.37 1.63 2.64 1.94 5.22 0 .24.22.44.5.44h5.09c.28 0 .5-.19.5-.44C11.37 6.99 13 6.72 13 4.35 13 1.95 10.77 0 8.01 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span>
                  cd.connectionIssueSuggestion
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
          data-name="commonGitBackButton"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
            icon="chevron-left"
          >
            <svg
              data-icon="chevron-left"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-left
              </desc>
              <path
                d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            back
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main nextButton Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            finish
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
